--- a/WebSite/LibLogic/LibLogic.csproj
+++ b/WebSite/LibLogic/LibLogic.csproj
@@ -47,30 +47,6 @@
       <HintPath>..\References\Dapper.Contrib.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
-    <Reference Include="Renci.SshNet">
-      <HintPath>..\packages\SSH.NET.2013.4.7\lib\net40\Renci.SshNet.dll</HintPath>
-    </Reference>
-    <Reference Include="Ionic.Zip">
-      <HintPath>..\packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
-    </Reference>
-    <Reference Include="RestSharp">
-      <HintPath>..\packages\RestSharp.105.0.1\lib\net4\RestSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="Stripe.net">
-      <HintPath>..\packages\Stripe.net.2.5.1\lib\net40\Stripe.net.dll</HintPath>
-    </Reference>
-    <Reference Include="FluentMigrator">
-      <HintPath>..\packages\FluentMigrator.1.6.1\lib\40\FluentMigrator.dll</HintPath>
-    </Reference>
-    <Reference Include="FluentMigrator.Runner">
-      <HintPath>..\packages\FluentMigrator.Runner.1.6.1\lib\40\FluentMigrator.Runner.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Data">
-      <HintPath>..\packages\MySql.Data.6.9.8\lib\net45\MySql.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin\Regions.cs" />
@@ -160,7 +136,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -176,14 +151,30 @@
       <Name>LibPoco</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Email\" />
-    <Folder Include="Ssh\" />
-    <Folder Include="Accounts\" />
-    <Folder Include="Site\" />
+    <PackageReference Include="DotNetZip">
+      <Version>1.11.0</Version>
+    </PackageReference>
+    <PackageReference Include="FluentMigrator.Runner">
+      <Version>1.6.1</Version>
+    </PackageReference>
+    <PackageReference Include="MySql.Data">
+      <Version>6.9.8</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="RestSharp">
+      <Version>105.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="SSH.NET">
+      <Version>2013.4.7</Version>
+    </PackageReference>
+    <PackageReference Include="Stripe.net">
+      <Version>2.5.1</Version>
+    </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Email\EmailTemplate.txt" />
   </ItemGroup>
