--- a/WebSite/SiteTests/SiteTests.csproj
+++ b/WebSite/SiteTests/SiteTests.csproj
@@ -1,61 +1,40 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{038CDF2A-0D94-4A74-B387-19CDA0AD333A}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SiteTests</RootNamespace>
-    <AssemblyName>SiteTests</AssemblyName>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFramework>net45</TargetFramework>
+    <AssemblyTitle>SiteTests</AssemblyTitle>
+    <Copyright>Peter</Copyright>
+    <Deterministic>false</Deterministic>
+    <AssemblyVersion>1.0.*</AssemblyVersion>
+    <FileVersion>1.0.*</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <PlatformTarget>x86</PlatformTarget>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <WarningLevel>4</WarningLevel>
-    <Optimize>false</Optimize>
+    <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <PlatformTarget>x86</PlatformTarget>
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <WarningLevel>4</WarningLevel>
+    <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
     <Optimize>false</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <WarningLevel>4</WarningLevel>
-    <Optimize>false</Optimize>
+    <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <WarningLevel>4</WarningLevel>
+    <OutputPath>bin\$(Platform)\$(Configuration)\</OutputPath>
     <Optimize>false</Optimize>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
     <Reference Include="Dapper.Contrib">
       <HintPath>..\References\Dapper.Contrib.dll</HintPath>
     </Reference>
@@ -64,39 +43,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Setup.cs" />
-    <Compile Include="LibLogic\OpenVpn\GenerateCertsTest.cs" />
-    <Compile Include="LibLogic\Pptp\PPTPServerTest.cs" />
-    <Compile Include="LibLogic\OpenVpn\RevokeCertsTest.cs" />
-    <Compile Include="LibLogic\DailyProcessingTest.cs" />
-    <Compile Include="LibLogic\PaymentsTest.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <ProjectReference Include="..\LibLogic\LibLogic.csproj">
-      <Project>{35B0D4BC-8E11-4BA8-9DC2-322478C75FD5}</Project>
-      <Name>LibLogic</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LibPoco\LibPoco.csproj">
-      <Project>{45F7ECD1-4362-42A8-86A8-1FABF559F935}</Project>
-      <Name>LibPoco</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\VpnSite\VpnSite.csproj">
-      <Project>{65230764-5A1B-4EA4-AEC8-62B3EF9ACC3B}</Project>
-      <Name>VpnSite</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\LibLogic\LibLogic.csproj" />
+    <ProjectReference Include="..\LibPoco\LibPoco.csproj" />
+    <ProjectReference Include="..\VpnSite\VpnSite.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <PackageReference Include="MySql.Web" Version="6.9.8" />
+    <PackageReference Include="NUnit" Version="2.6.4" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MySql.Web">
-      <Version>6.9.8</Version>
-    </PackageReference>
-    <PackageReference Include="NUnit">
-      <Version>2.6.4</Version>
-    </PackageReference>
+    <Compile Remove="obj\x64\Debug\.NETFramework,Version=v4.5.AssemblyAttributes.cs" />
+    <Compile Remove="obj\x64\Release\.NETFramework,Version=v4.5.AssemblyAttributes.cs" />
+    <Compile Remove="obj\x86\Debug\.NETFramework,Version=v4.5.AssemblyAttributes.cs" />
+    <Compile Remove="obj\x86\Release\.NETFramework,Version=v4.5.AssemblyAttributes.cs" />
   </ItemGroup>
 </Project>
