upgrade to net48 as build target

--- a/WebSite/SiteTestsFast/SiteTestsFast.csproj
+++ b/WebSite/SiteTestsFast/SiteTestsFast.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net45</TargetFramework>
-    <DebugType>full</DebugType>
+    <TargetFramework>net48</TargetFramework>
+    <DebugType>portable</DebugType>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
