--- a/WebSite/VpnSite/web.config
+++ b/WebSite/VpnSite/web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -13,60 +13,53 @@
     <remove name="LocalMySqlServer"/>
     <add name="LocalMySqlServer" connectionString="" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation targetFramework="4.0" debug="true">
-      <assemblies>
-      </assemblies>
+    <compilation targetFramework="4.8" debug="true">
+      <assemblies/>
     </compilation>
     <customErrors mode="RemoteOnly" defaultRedirect="/error.html"/>
     <sessionState mode="Custom" timeout="30" cookieName="majorsilencevpn_session" customProvider="MySqlSessionStateProvider">
       <providers>
-        <add name="MySqlSessionStateProvider"
-          type="MySql.Web.SessionState.MySqlSessionStateStore, MySql.Web, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"
-          applicationName="/vpnsite" description="MySQL vpnsite Session State" connectionStringName="LocalMySqlServer" writeExceptionsToEventLog="False"
-          autogenerateschema="True" enableExpireCallback="False"/>
+        <add name="MySqlSessionStateProvider" type="MySql.Web.SessionState.MySqlSessionStateStore, MySql.Web, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" applicationName="/vpnsite" description="MySQL vpnsite Session State" connectionStringName="LocalMySqlServer" writeExceptionsToEventLog="False" autogenerateschema="True" enableExpireCallback="False"/>
       </providers>
     </sessionState>
     <membership defaultProvider="MySQLMembershipProvider">
       <providers>
         <remove name="MySQLMembershipProvider"/>
-        <add name="MySQLMembershipProvider"
-          type="MySql.Web.Security.MySQLMembershipProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"
-          connectionStringName="LocalMySqlServer" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="true"
-          applicationName="/" requiresUniqueEmail="false" passwordFormat="Clear" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="7"
-          minRequiredNonalphanumericCharacters="1" passwordAttemptWindow="10" passwordStrengthRegularExpression=""/>
+        <add name="MySQLMembershipProvider" type="MySql.Web.Security.MySQLMembershipProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="true" applicationName="/" requiresUniqueEmail="false" passwordFormat="Clear" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="7" minRequiredNonalphanumericCharacters="1" passwordAttemptWindow="10" passwordStrengthRegularExpression=""/>
       </providers>
     </membership>
     <profile defaultProvider="MySQLProfileProvider">
       <providers>
         <remove name="MySQLProfileProvider"/>
-        <add name="MySQLProfileProvider"
-          type="MySql.Web.Profile.MySQLProfileProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"
-          connectionStringName="LocalMySqlServer" applicationName="/"/>
+        <add name="MySQLProfileProvider" type="MySql.Web.Profile.MySQLProfileProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/"/>
       </providers>
     </profile>
     <roleManager defaultProvider="MySQLRoleProvider">
       <providers>
         <remove name="MySQLRoleProvider"/>
-        <add name="MySQLRoleProvider" type="MySql.Web.Security.MySQLRoleProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"
-          connectionStringName="LocalMySqlServer" applicationName="/"/>
+        <add name="MySQLRoleProvider" type="MySql.Web.Security.MySQLRoleProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/"/>
       </providers>
     </roleManager>
     <siteMap defaultProvider="MySqlSiteMapProvider">
       <providers>
         <remove name="MySqlSiteMapProvider"/>
-        <add name="MySqlSiteMapProvider"
-          type="MySql.Web.SiteMap.MySqlSiteMapProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"
-          connectionStringName="LocalMySqlServer" applicationName="/"/>
+        <add name="MySqlSiteMapProvider" type="MySql.Web.SiteMap.MySqlSiteMapProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/"/>
       </providers>
     </siteMap>
     <webParts>
       <personalization defaultProvider="MySQLPersonalizationProvider">
         <providers>
           <remove name="MySQLPersonalizationProvider"/>
-          <add name="MySQLPersonalizationProvider"
-            type="MySql.Web.Personalization.MySqlPersonalizationProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"
-            connectionStringName="LocalMySqlServer" applicationName="/"/>
+          <add name="MySQLPersonalizationProvider" type="MySql.Web.Personalization.MySqlPersonalizationProvider, MySql.Web, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/"/>
         </providers>
       </personalization>
     </webParts>
@@ -105,8 +98,7 @@
   <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient"/>
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL"
-        type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
     </DbProviderFactories>
   </system.data>
 </configuration>
