--- a/WebSite/LibLogic/LibLogic.csproj
+++ b/WebSite/LibLogic/LibLogic.csproj
@@ -154,22 +154,25 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DotNetZip">
-      <Version>1.11.0</Version>
+      <Version>1.15.0</Version>
     </PackageReference>
     <PackageReference Include="FluentMigrator.Runner">
-      <Version>1.6.1</Version>
+      <Version>3.2.11</Version>
+    </PackageReference>
+    <PackageReference Include="FluentMigrator.Runner.MySql">
+      <Version>3.2.11</Version>
     </PackageReference>
     <PackageReference Include="MySql.Data">
-      <Version>6.9.8</Version>
+      <Version>8.0.23</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="RestSharp">
-      <Version>105.0.1</Version>
+      <Version>106.11.7</Version>
     </PackageReference>
     <PackageReference Include="SSH.NET">
-      <Version>2013.4.7</Version>
+      <Version>2020.0.1</Version>
     </PackageReference>
     <PackageReference Include="Stripe.net">
       <Version>2.5.1</Version>
