--- a/WebSite/SiteTestsFast/SiteTestsFast.csproj
+++ b/WebSite/SiteTestsFast/SiteTestsFast.csproj
@@ -11,11 +11,9 @@
     <OutputPath>bin\Release</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions" />
-    <Reference Include="System.Data.DataSetExtensions" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibLogic\LibLogic.csproj" />
@@ -30,6 +28,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="Stripe.net" Version="2.5.1" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="CreateAccountTest.cs" />
