--- a/WebSite/MajorsilenceTypes/MajorsilenceTypes.csproj
+++ b/WebSite/MajorsilenceTypes/MajorsilenceTypes.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFrameworks>net48;netstandard2.0</TargetFrameworks>
     <AssemblyTitle>MajorsilenceTypes</AssemblyTitle>
     <Company>Majorsilence Solutions Inc.</Company>
     <Copyright>Peter Gill</Copyright>
