--- a/WebSite/SiteTests/SiteTests.csproj
+++ b/WebSite/SiteTests/SiteTests.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFrameworks>net48;net5.0</TargetFrameworks>
     <AssemblyTitle>SiteTests</AssemblyTitle>
     <Copyright>Peter</Copyright>
     <Deterministic>false</Deterministic>
