a little closer to being able to compile on .net 5 and asp core

--- a/WebSite/VpnSite/appsettings.json
+++ b/WebSite/VpnSite/appsettings.json
@@ -4,6 +4,13 @@
   "ConnectionStrings": {
     "LocalMySqlServer": "server=192.168.40.4;user=root;pwd=Password123;database=VpnSessions;"
   },
+  "SmtpSettings": {
+    "FromAddress": "",
+    "Username": "",
+    "Password": "",
+    "Host": "",
+    "Port":  ""
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
