continue converting to asp.net core 3.1

--- a/WebSite/SiteTestsFast/SiteTestsFast.csproj
+++ b/WebSite/SiteTestsFast/SiteTestsFast.csproj
@@ -35,4 +35,7 @@
     <Compile Remove="Setup.cs" />
     <Compile Remove="Test.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MvcFakes\" />
+  </ItemGroup>
 </Project>
