--- a/WebSite/SiteTests/SiteTests.csproj
+++ b/WebSite/SiteTests/SiteTests.csproj
@@ -35,11 +35,10 @@
   <ItemGroup>
     <ProjectReference Include="..\LibLogic\LibLogic.csproj" />
     <ProjectReference Include="..\LibPoco\LibPoco.csproj" />
-    <ProjectReference Include="..\VpnSite\VpnSite.csproj" />
+    <ProjectReference Include="..\VpnSite\Majorsilence.Vpn.Site.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
-    <PackageReference Include="MySql.Web" Version="8.0.23" />
     <PackageReference Include="NUnit" Version="3.13.1" />
   </ItemGroup>
   <ItemGroup>
