--- a/WebSite/SiteTestsFast/SiteTestsFast.csproj
+++ b/WebSite/SiteTestsFast/SiteTestsFast.csproj
@@ -11,20 +11,14 @@
     <OutputPath>bin\Release</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System.Web.Routing" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Abstractions" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\LibLogic\LibLogic.csproj" />
     <ProjectReference Include="..\LibPoco\LibPoco.csproj" />
-    <ProjectReference Include="..\VpnSite\VpnSite.csproj" />
+    <ProjectReference Include="..\VpnSite\Majorsilence.Vpn.Site.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
-    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
     <PackageReference Include="Moq" Version="4.16.0" />
-    <PackageReference Include="MySql.Web" Version="8.0.23" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="Stripe.net" Version="2.5.1" />
@@ -34,8 +28,5 @@
     <Compile Remove="CreateAccountTest.cs" />
     <Compile Remove="Setup.cs" />
     <Compile Remove="Test.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MvcFakes\" />
   </ItemGroup>
 </Project>
