--- a/WebSite/VpnSite/Majorsilence.Vpn.Site.csproj
+++ b/WebSite/VpnSite/Majorsilence.Vpn.Site.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>b02d2f7d-8e5a-401f-836e-ad5aefcca2f3</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <RootNamespace>Majorsilence.Vpn.Site</RootNamespace>
