--- a/WebSite/Majorsilence.Vpn.Site/appsettings.json
+++ b/WebSite/Majorsilence.Vpn.Site/appsettings.json
@@ -9,7 +9,7 @@
     "Username": "",
     "Password": "",
     "Host": "",
-    "Port":  ""
+    "Port":  465
   },
   "Logging": {
     "LogLevel": {
