initial docker/docker compose/visual studio integration

--- a/WebSite/Majorsilence.Vpn.Site/Majorsilence.Vpn.Site.csproj
+++ b/WebSite/Majorsilence.Vpn.Site/Majorsilence.Vpn.Site.csproj
@@ -6,6 +6,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <RootNamespace>Majorsilence.Vpn.Site</RootNamespace>
     <AssemblyName>Majorsilence.Vpn.Site</AssemblyName>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
