--- a/WebSite/Majorsilence.Vpn.Site/appsettings.json
+++ b/WebSite/Majorsilence.Vpn.Site/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "MySqlInstance": "192.168.40.4",
-  "MySqlDatabase": "vpndb",
   "ConnectionStrings": {
-    "LocalMySqlServer": "server=192.168.40.4;user=root;pwd=Password123;database=VpnSessions;"
+    "MySqlSessions": "server=192.168.40.4;user=root;pwd=Password123;database=VpnSessions;CharSet=utf8mb4;",
+    "MySqlVpn": "server=192.168.40.4;user=root;pwd=Password123;database=vpndb;CharSet=utf8mb4;"
   },
   "SmtpSettings": {
     "FromAddress": "",
