--- a/WebSite/Majorsilence.Vpn.Logic/Majorsilence.Vpn.Logic.csproj
+++ b/WebSite/Majorsilence.Vpn.Logic/Majorsilence.Vpn.Logic.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <ProjectGuid>{35B0D4BC-8E11-4BA8-9DC2-322478C75FD5}</ProjectGuid>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <TargetFrameworks>net48;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputPath>bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
