--- a/WebSite/Majorsilence.Vpn.Site/appsettings.json
+++ b/WebSite/Majorsilence.Vpn.Site/appsettings.json
@@ -1,14 +1,17 @@
 {
   "ConnectionStrings": {
-    "MySqlSessions": "server=192.168.40.4;user=root;pwd=Password123;database=VpnSessions;CharSet=utf8mb4;",
-    "MySqlVpn": "server=192.168.40.4;user=root;pwd=Password123;database=vpndb;CharSet=utf8mb4;"
+    "MySqlSessions": "server=192.168.2.35;port=3306;user=root;pwd=Password123;database=VpnSessions;CharSet=utf8mb4;",
+    "MySqlVpn": "server=192.168.2.35;port=3306;user=root;pwd=Password123;database=vpndb;CharSet=utf8mb4;"
   },
   "SmtpSettings": {
     "FromAddress": "",
     "Username": "",
     "Password": "",
     "Host": "",
-    "Port":  465
+    "Port": 465
+  },
+  "SiteInitialization": {
+
   },
   "Logging": {
     "LogLevel": {
