--- a/WebSite/Majorsilence.Vpn.MajorsilenceTypes/Majorsilence.Vpn.MajorsilenceTypes.csproj
+++ b/WebSite/Majorsilence.Vpn.MajorsilenceTypes/Majorsilence.Vpn.MajorsilenceTypes.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net48;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <AssemblyTitle>MajorsilenceTypes</AssemblyTitle>
     <Company>Majorsilence Solutions Inc.</Company>
     <Copyright>Peter Gill</Copyright>
