--- a/WebSite/Majorsilence.Vpn.Poco/Majorsilence.Vpn.Poco.csproj
+++ b/WebSite/Majorsilence.Vpn.Poco/Majorsilence.Vpn.Poco.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <TargetFrameworks>net48;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <AssemblyTitle>Majorsilence.Vpn.Poco</AssemblyTitle>
     <Product>Majorsilence.Vpn.Poco</Product>
     <Copyright>Copyright ©  2014</Copyright>
