--- a/WebSite/docker-compose.yml
+++ b/WebSite/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3.4'
 
 services:
   db:
-    container_name: ${MYSQL_SERVER_NAME}
+    container_name: MariaDbServer
     image: mariadb:10.5
     environment:
       MYSQL_RANDOM_ROOT_PASSWORD: 1
       MYSQL_DATABASE: vpndb
       MYSQL_USER: dbuser
       MYSQL_PASSWORD: Password123
-      #MYSQL_ROOT_PASSWORD: Password123
+      MYSQL_ROOT_PASSWORD: Password123
       #MYSQL_ROOT_HOST: 172.17.0.1
     volumes:
       - dbdata:/var/lib/mysql
@@ -21,8 +21,8 @@ services:
     depends_on:
       - db
     environment:
-      ConnectionStrings__MySqlSessions: "server=${MYSQL_SERVER_NAME};user=dbuser;pwd=Password123;database=VpnSessions;CharSet=utf8mb4;"
-      ConnectionStrings__MySqlVpn: "server=${MYSQL_SERVER_NAME};user=dbuser;pwd=Password123;database=vpndb;CharSet=utf8mb4;"
+      ConnectionStrings__MySqlSessions: server=MariaDbServer;user=dbuser;pwd=Password123;database=VpnSessions;CharSet=utf8mb4;
+      ConnectionStrings__MySqlVpn: server=MariaDbServer;user=dbuser;pwd=Password123;database=vpndb;CharSet=utf8mb4;
     build:
       context: .
       dockerfile: Majorsilence.Vpn.Site/Dockerfile
