upgrade nuget packages

--- a/WebSite/Majorsilence.Vpn.Site/appsettings.json
+++ b/WebSite/Majorsilence.Vpn.Site/appsettings.json
@@ -13,6 +13,11 @@
   "SiteInitialization": {
 
   },
+  "Paypal": {
+    "Username": "",
+    "Password": "",
+    "Url": "https://api.sandbox.paypal.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
