--- a/WebSite/Majorsilence.Vpn.Site/appsettings.json
+++ b/WebSite/Majorsilence.Vpn.Site/appsettings.json
@@ -3,20 +3,29 @@
     "MySqlSessions": "server=192.168.2.35;port=3306;user=root;pwd=Password123;database=VpnSessions;CharSet=utf8mb4;",
     "MySqlVpn": "server=192.168.2.35;port=3306;user=root;pwd=Password123;database=vpndb;CharSet=utf8mb4;"
   },
-  "SmtpSettings": {
-    "FromAddress": "",
-    "Username": "",
-    "Password": "",
-    "Host": "",
-    "Port": 465
+  "Settings": {
+    "Smtp": {
+      "FromAddress": "",
+      "Username": "",
+      "Password": "",
+      "Host": "",
+      "Port": 465
+    },
+    "SiteInitialization": {
+    },
+    "Paypal": {
+      "Username": "",
+      "Password": "",
+      "Url": "https://api.sandbox.paypal.com"
+    },
+    "TestEmailsAccounts":{
+
+    },
+    "EncryptionKeys": {
+      "Key1": "PLACEHOLDER"
+    }
   },
-  "SiteInitialization": {
-  },
-  "Paypal": {
-    "Username": "",
-    "Password": "",
-    "Url": "https://api.sandbox.paypal.com"
-  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
