--- a/WebSite/Majorsilence.Vpn.Poco/Majorsilence.Vpn.Poco.csproj
+++ b/WebSite/Majorsilence.Vpn.Poco/Majorsilence.Vpn.Poco.csproj
@@ -1,16 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <TargetFrameworks>net6.0</TargetFrameworks>
-    <AssemblyTitle>Majorsilence.Vpn.Poco</AssemblyTitle>
-    <Product>Majorsilence.Vpn.Poco</Product>
-    <Copyright>Copyright ©  2014</Copyright>
-    <Deterministic>false</Deterministic>
-    <AssemblyVersion>1.0.*</AssemblyVersion>
-    <FileVersion>1.0.*</FileVersion>
-    <OutputPath>bin\$(Configuration)\</OutputPath>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-  </ItemGroup></Project>
+    <PropertyGroup>
+        <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+        <TargetFrameworks>net6.0</TargetFrameworks>
+        <AssemblyTitle>Majorsilence.Vpn.Poco</AssemblyTitle>
+        <Product>Majorsilence.Vpn.Poco</Product>
+        <Copyright>Copyright © 2014</Copyright>
+        <Deterministic>false</Deterministic>
+        <AssemblyVersion>1.0.*</AssemblyVersion>
+        <FileVersion>1.0.*</FileVersion>
+        <OutputPath>bin\$(Configuration)\</OutputPath>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Dapper.Contrib" Version="2.0.78"/>
+        <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
+    </ItemGroup>
+    <ItemGroup>
+        <None Remove="app.config"/>
+    </ItemGroup>
+</Project>
